--- a/witherable/witherable.cabal
+++ b/witherable/witherable.cabal
@@ -18,6 +18,20 @@ source-repository head
   type: git
   location: https://github.com/fumieval/witherable.git
 
+benchmark bench-nub
+  default-language:    Haskell2010
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      benchmarks
+  ghc-options:         -Wall -Wcompat
+  main-is:             nub.hs
+  build-depends:       base,
+                       criterion,
+                       deepseq,
+                       text,
+                       vector,
+                       QuickCheck,
+                       witherable
+
 library
   exposed-modules:
     Witherable
